# FaceRecog_AntiSpoof-on-RaspberryPi4B

./: .gitignore  CMakeLists.txt  intro.txt
include/: FacePreprocess.h
src/: arcface.h  live.cpp  livefacereco.cpp  livefacereco.hpp  main.cpp  mtcnn_new.cpp
